--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         </main>
     </div>
     <script src="script.js"></script>
+    <script src="//code.tidio.co/nw9ehb2jw0oswtaxnqbnnwxigwsff708.js" async></script>
 </body>
 </html>
